# span-to-ibo

./: .flake8  README.md  pyproject.toml  ruff.toml
span_to_ibo/: doccano.py
tests/: test_doccano.py
